--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,2 +1,81 @@
-nav{background-color:pink}nav ul{margin:0;padding:0}nav ul li{display:inline}nav a{text-decoration:none}.team{display:flex;flex-direction:row;flex-wrap:wrap;justify-content:space-evenly}.team .user-panel{flex:0 1 200px;text-align:center;padding:8px}.team .user-panel .u-avatar{max-width:200px}.team .user-panel .u-link{display:block;text-decoration:none;margin:0 auto;background-color:rgba(255,255,255,0.8);padding:5px}.team .user-panel h1,.team .user-panel h3{margin:5px 0}@media screen and (min-width: 900px){.team .user-panel{flex:1 1}.team .user-panel .u-avatar{max-width:300px}}.lightbox{display:none;flex-direction:row;min-height:100vh;width:100%;position:fixed;top:0;z-index:5000;padding:20px;background-color:rgba(0,0,0,0.85)}.lightbox .sidebar{flex:1}.lightbox .lb-content{flex:3}.lightbox img{max-width:250px}.lightbox .close{right:24px;top:10px;cursor:pointer;font-size:2em;position:fixed;border:thin solid white;padding:2px 14px 5px;border-radius:50%;background-color:rgba(255,255,255,0.25)}.show-lb{display:flex !important}.u-social li{display:inline-block;padding:10px}body{color:#fff;background-color:#000}h1,h2,h3{color:#ff0}.panel{min-height:80vh}.panel:nth-child(odd){background-color:salmon;color:white}#to-top{position:fixed;bottom:10px;right:10px;display:none}footer{color:orange}ul{margin:0;padding:0}ul li{display:inline}ul li a{text-decoration:none}
+body {
+  background-color: blue;
+  color: #000226; }
+
+h3 {
+  display: none; }
+
+.errorimg {
+  position: absolute;
+  margin-left: 350px;
+  text-align: center;
+  margin-top: 15px; }
+
+.error-section a, .error-home {
+  color: white;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+  font-family: Helvetica;
+  text-transform: uppercase; }
+
+body {
+  color: white;
+  background-color: #000; }
+
+h1, h2, h3 {
+  color: #333333;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  padding-top: 15px; }
+
+p {
+  font-family: Helvetica; }
+
+.panel {
+  min-height: 80vh; }
+
+.panel:nth-child(odd) {
+  background-color: #fff;
+  color: #000;
+  border-radius: 25px; }
+
+.box {
+  margin: 0 auto;
+  width: 75%; }
+
+.team {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-evenly; }
+  .team .user-panel {
+    flex: 0 1 200px;
+    text-align: center;
+    padding: 8px;
+    border: solid #000 7px;
+    border-radius: 25px;
+    margin: 25px; }
+    .team .user-panel .u-image {
+      max-width: 200px; }
+    .team .user-panel .u-link {
+      display: block;
+      text-decoration: none;
+      margin: 0 auto;
+      background-color: rgba(255, 255, 255, 0.8);
+      padding: 5px; }
+    .team .user-panel h1, .team .user-panel h3 {
+      margin: 5px 0; }
+
+@media screen and (min-width: 900px) {
+  .team .user-panel {
+    flex: 1 1; }
+    .team .user-panel .u-image {
+      max-width: 300px; } }
+#to-top {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  display: none; }
+
 /*# sourceMappingURL=main.css.map */
