--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,39 +1,23 @@
 <section id="section1" class="panel">
-    <div class="bio-info">
-        <h1 class="p-name">Some generic info here...</h1>
-        <h2>hello my name is Noah Fainer</h2>
-    </div>
 
-</section>
-{{!-- <section id="section2" class="panel">panel 2</section> --}}
-<section id="section3" class="panel">
     <h1 class="user-panel-heading">
-        Welcome to our awesome team section!
+        Here are Noah Fainer's Favourite Things
     </h1>
-
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati odit animi, vero perspiciatis
-        accusantium nisi molestiae, nostrum quisquam unde deleniti, expedita dicta ab quae possimus omnis amet!
-        Modi, nemo autem!Ducimus dolorum aliquid id quae vel sapiente, omnis iste fugiat magni rem
-        exercitationem. Facilis voluptatum praesentium animi rem provident, nam rerum reiciendis perspiciatis
-        optio dolorem magnam temporibus neque quo cum.
-    </p>
-
-    <h4>Click on a team member below to learn more about them.</h4>
 
     <div class="team">
         <!-- loop through all our team members and put their info on the page -->
         <!-- this is exactly like a forEach loop with plain javascript -->
-        {{#each people}}
+        {{#each item}}
         <div class="user-panel">
-            <img class="u-avatar" src="images/{{avatar}}" alt="avatar">
+            <img class="u-image" src="images/{{image}}" alt="image">
 
-            <a class="u-link" href="{{ID}}">
-                see more info
-            </a>
+            <h1>{{title}}</h1>
 
-            <h1>{{Name}}</h1>
-            <h3>{{JobTitle}}</h3>
+            <div class="box">
+            <p>{{description}}</p>
+            <p>{{reason}}</p>
+            <button><a href="{{link}}">{{title}}</a></button>
+            </div>
 
 
        
@@ -44,17 +28,4 @@
     </div>
     </div>
 
-    <!-- this will be filled in on the client side when we render our AJAX data -->
-    <section class="lightbox">
-        <span class="close">x</span>
-        <div class="sidebar">
-            <img src="" alt="larger bio image">
-        </div>
-
-        <div class="lb-content">
-
-        </div>
-    </section>
 </section>
-<section id="section4" class="panel">panel 4</section>
-<section id="section5" class="panel"></section>
