--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -9,38 +9,16 @@
     <!-- css stuff -->
     <!-- link to reset -->
     <link rel="stylesheet" href="css/main.css">
-    <title>Document</title>
+    <title>Favourite Things</title>
 </head>
 
 <body>
-    <h1>Fun with Modules!</h1>
-    <nav data-module="nav">
-        <!-- nav elements must have nav-item -->
-        <ul>
-            <li><a href="#" class="nav-item">1</a></li>
-            <li><a href="/2" class="nav-item">2</a></li>
-            <li><a href="#section3" class="nav-item">3</a></li>
-            <li><a href="#section4" class="nav-item">4</a></li>
-            <li><a href="#section5" class="nav-item">5</a></li>
-            <li><a href="#section6" class="nav-item">6</a></li>
-        </ul>
-    </nav>
-
+    <h1>Favourite Things</h1>
+    
     <main>
         {{{ body }}}
     </main>
 
-    <footer>
-        <p>here's some footer text</p>
-
-        <ul>
-            <li><a href="#" class="nav-item">1</a></li>
-            <li><a href="/2" class="nav-item">2</a></li>
-            <li><a href="#section3" class="nav-item">3</a></li>
-            <li><a href="#section4" class="nav-item">4</a></li>
-            <li><a href="#section5" class="nav-item">5</a></li>
-        </ul>
-    </footer>
 
     <a id="to-top" href="#" class="nav-item">back to top</a>
 
